syntax = "proto3";

package ai.metathings.service.core_agent;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message HeartbeatRequest {
	google.protobuf.StringValue entity_id = 1 [(validator.field) = {msg_exists: true}];
}
