syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message DeleteRoleRequest {
	google.protobuf.StringValue role_id = 1 [(validator.field) = {msg_exists: true}];
}
